--- a/test/Base.lproj/Main_iPhone.storyboard
+++ b/test/Base.lproj/Main_iPhone.storyboard
@@ -15,11 +15,81 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z4T-3w-qiy">
+                                <rect key="frame" x="20" y="401" width="280" height="73"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="73" id="g8S-If-fQd"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rli-SB-Fah">
+                                <rect key="frame" x="20" y="20" width="122" height="117"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IkM-Pp-zkb">
+                                <rect key="frame" x="178" y="20" width="122" height="117"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OxP-Ko-yRm">
+                                <rect key="frame" x="20" y="145" width="122" height="117"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wwl-fg-6V9">
+                                <rect key="frame" x="178" y="145" width="122" height="117"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VsO-9z-HiH">
+                                <rect key="frame" x="20" y="270" width="122" height="117"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b1g-0o-hVZ">
+                                <rect key="frame" x="178" y="270" width="122" height="117"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OxP-Ko-yRm" firstAttribute="height" secondItem="Rli-SB-Fah" secondAttribute="height" id="2aa-9r-9Gt"/>
+                            <constraint firstItem="JWD-KN-5ou" firstAttribute="top" secondItem="z4T-3w-qiy" secondAttribute="bottom" constant="6" id="9mv-nM-bEv"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="leading" secondItem="IkM-Pp-zkb" secondAttribute="leading" id="Ava-nZ-Ip7"/>
+                            <constraint firstItem="VsO-9z-HiH" firstAttribute="leading" secondItem="Rli-SB-Fah" secondAttribute="leading" id="BU5-xl-8PP"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="trailing" secondItem="IkM-Pp-zkb" secondAttribute="trailing" id="DCv-HV-e19"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="leading" secondItem="b1g-0o-hVZ" secondAttribute="leading" id="Dqn-gB-UbB"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="top" secondItem="IkM-Pp-zkb" secondAttribute="bottom" constant="8" id="EOS-II-7XG"/>
+                            <constraint firstItem="VsO-9z-HiH" firstAttribute="top" secondItem="OxP-Ko-yRm" secondAttribute="bottom" constant="8" id="Etk-RP-iXv"/>
+                            <constraint firstItem="Rli-SB-Fah" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="IWs-fG-MjT"/>
+                            <constraint firstItem="z4T-3w-qiy" firstAttribute="top" secondItem="VsO-9z-HiH" secondAttribute="bottom" constant="14" id="JpO-eh-ple"/>
+                            <constraint firstAttribute="trailing" secondItem="Wwl-fg-6V9" secondAttribute="trailing" constant="20" symbolic="YES" id="Kwm-xo-U8g"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="trailing" secondItem="z4T-3w-qiy" secondAttribute="trailing" id="OJ5-1a-ccg"/>
+                            <constraint firstItem="OxP-Ko-yRm" firstAttribute="top" secondItem="Rli-SB-Fah" secondAttribute="bottom" constant="8" id="Qy2-Lq-gl3"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="trailing" secondItem="b1g-0o-hVZ" secondAttribute="trailing" id="T7U-Cs-E47"/>
+                            <constraint firstItem="OxP-Ko-yRm" firstAttribute="height" secondItem="Wwl-fg-6V9" secondAttribute="height" id="TXH-KD-izH"/>
+                            <constraint firstItem="z4T-3w-qiy" firstAttribute="top" secondItem="b1g-0o-hVZ" secondAttribute="bottom" constant="14" id="XmC-fL-AMD"/>
+                            <constraint firstItem="VsO-9z-HiH" firstAttribute="trailing" secondItem="Rli-SB-Fah" secondAttribute="trailing" id="cFf-f7-oF1"/>
+                            <constraint firstItem="VsO-9z-HiH" firstAttribute="trailing" secondItem="OxP-Ko-yRm" secondAttribute="trailing" id="hGq-4q-b6I"/>
+                            <constraint firstItem="OxP-Ko-yRm" firstAttribute="height" secondItem="b1g-0o-hVZ" secondAttribute="height" id="iON-yG-u7C"/>
+                            <constraint firstItem="OxP-Ko-yRm" firstAttribute="height" secondItem="VsO-9z-HiH" secondAttribute="height" id="ppA-di-mGi"/>
+                            <constraint firstItem="b1g-0o-hVZ" firstAttribute="top" secondItem="Wwl-fg-6V9" secondAttribute="bottom" constant="8" id="q3F-hK-vM8"/>
+                            <constraint firstItem="Rli-SB-Fah" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" id="rfp-d4-hNx"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="leading" secondItem="OxP-Ko-yRm" secondAttribute="trailing" constant="36" id="sKA-tD-fnk"/>
+                            <constraint firstItem="OxP-Ko-yRm" firstAttribute="height" secondItem="IkM-Pp-zkb" secondAttribute="height" id="siz-Ne-rda"/>
+                            <constraint firstItem="VsO-9z-HiH" firstAttribute="leading" secondItem="z4T-3w-qiy" secondAttribute="leading" id="u99-c0-nVr"/>
+                            <constraint firstItem="VsO-9z-HiH" firstAttribute="leading" secondItem="OxP-Ko-yRm" secondAttribute="leading" id="w7J-J8-YJy"/>
+                            <constraint firstItem="Wwl-fg-6V9" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="178" id="zEi-UR-9Gc"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="143" y="65"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
